src/objects/Progress_Dates_Milestones__c.object
<CustomObject>
    <description>This object captures the milestones related to the Progress Dates.</description>
    <fields>
        <fullName>Milestone_Comments__c</fullName>
        <label>Milestone Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Date__c</fullName>
        <label>Milestone Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Progress_Dates__c</fullName>
        <label>Progress Dates</label>
        <referenceTo>Progress_Dates__c</referenceTo>
        <relationshipName>Progress_Dates_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Milestones</label>
    <nameField>
        <displayFormat>Milestone-{000000}</displayFormat>
        <label>Progress Dates Milestones Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>